Andrei_Luchanok/13.K8s/wordpess_ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wp
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/server-alias: "wp.k8s-20.sa"
spec:
  rules:
    - host: wp.k8s-19.sa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-wordpress
                port:
                  number: 80
